--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     />
 
     <!-- Css -->
-    <link rel="stylesheet" href="../dist/css/styles.css" />
+    <link rel="stylesheet" href="./dist/css/styles.css" />
 
     <!-- Script -->
-    <script src="../dist/js/index.js" defer ></script>
+    <script src="./dist/js/index.js" defer ></script>
 
     <title>Guess the Flag</title>
   </head>
